k8s/apps/blog/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogweb
  namespace: cwx
spec:
  selector:
    app: blogweb
  ports:
  - port: 80
    targetPort: 80
