k8s/apps/blog/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cwx-site
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog2.chenwx.top`)
      kind: Rule
      services:
        - name: blogweb
          namespace: cwx
          port: 80
